prevent zoom on iOS input, select, textareas
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@12402 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified_responsive/css/media-queries.css
+++ b/templates/tpl_modified_responsive/css/media-queries.css
@@ -9,9 +9,10 @@
 --------------------------------------------------------------------------------------- */
 
 @supports (-webkit-overflow-scrolling: touch) {
-  input, select { font-size: 16px; line-height:20px; height:35px; }
+  input[type=text], input[type=password], input[type=email], input[type=tel] { font-size: 16px; height:35px; }
+  select { font-size: 16px; height:35px; }
   textarea { font-size: 16px; line-height:20px; }
-  .SumoSelect > .CaptionCont { font-size: 16px; line-height: 18px; height:35px; } 
+  .SumoSelect > .CaptionCont { font-size:16px; line-height:18px; height:35px; } 
 }
 
 @media only screen and (max-width: 1160px) {
